fixing auth
